refactor(server): candidate APIs
