# apps/server/src/routes/auth.routes.ts
@@ -1,10 +1,14 @@
 import express from 'express';
 import validator from '../middleware/validator';
 import { LoginUserSchema } from '../schemas/auth.schema';
-import { userLoginHandler } from '../controllers/auth.controllers';
+import { candidateLoginHandler } from '../controllers/auth.controllers';
 
 const router = express.Router();
 
-router.post('/login', validator(LoginUserSchema), userLoginHandler);
+router.post(
+    '/candidate/login',
+    validator(LoginUserSchema),
+    candidateLoginHandler,
+);
 
 export default router;
