# apps/server/src/routes/candidate.routes.ts
@@ -1,15 +1,19 @@
 import express from 'express';
 import validator from '../middleware/validator';
-import { RegisterUserSchema } from '../schemas/user.schema';
+import { RegisterCandidateSchema } from '../schemas/user.schema';
 import {
     GetCurrentUserHandler,
-    UserRegisterHandler,
-} from '../controllers/user.controllers';
+    CandidateRegisterHandler,
+} from '../controllers/candidate.controllers';
 import { verifyJwt } from '../middleware/auth.middleware';
 
 const router = express.Router();
 
-router.post('/register', validator(RegisterUserSchema), UserRegisterHandler);
+router.post(
+    '/register',
+    validator(RegisterCandidateSchema),
+    CandidateRegisterHandler,
+);
 router.get('/current-user', verifyJwt, GetCurrentUserHandler);
 
 export default router;
